--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
     <section class="hero" id="home">
         <div class="slideshow-container">
             <div class="slide active">
-                <img src="./images/hero Images/bannerimage1.webp" alt="Technology workspace">
+                <img src="./images/hero Images/bannerimage1.webp" alt="Slide 1">
             </div>
             <div class="slide">
-                <img src="./images/hero Images/bannerImage2.webp" alt="Business meeting">
+                <img src="./images/hero Images/bannerImage2.webp" alt="Slide 2">
             </div>
             <div class="slide">
-                <img src="./images/hero Images/bannerimage3.webp" alt="Team collaboration">
+                <img src="./images/hero Images/bannerimage3.webp" alt="Slide 3">
             </div>
             <div class="slide">
-                <img src="./images/hero Images/bannerimage4.webp" alt="Creative workspace">
+                <img src="./images/hero Images/bannerimage4.webp" alt="Slide 4">
             </div>
             <div class="slide">
-                <img src="./images/hero Images/bannerimage5.webp" alt="Business growth">
+                <img src="./images/hero Images/bannerimage5.webp" alt="Slide 5">
             </div>
         </div>
         
@@ -82,9 +82,10 @@
             </div>
         </div>
     </section>
-    <!--Fearured Projects Section-->
-        <div>
-            <h2 style="text-align: center; margin-top: 30px;">Featured Projects</h2>
+    <section>
+        <!--Fearured Projects Section-->
+        <div style="background-color: #f3f3f3; border-top-left-radius: 10px; border-top-right-radius: 10px;">
+            <h2 style="text-align: center; margin-top: 30px; padding-top: 20px;">Featured Projects</h2>
             <br>
             <p style="text-align: center;">Discover our portfolio of projects that showcase innovation, <br>sustainability, and timeless design principles.</p>
         </div>
@@ -105,7 +106,6 @@
                 </div>
             </div>
             <!--Card 2-->
-            <!--We left here on card two-->
             <div class="project_card">
                 <div class="card_image">
                     <img src="./images/card2.webp" alt="Project 2 tile">
@@ -115,11 +115,100 @@
                         <span class="card_category">Residential</span>
                         <span class="card_year">2024</span>
                     </div>
+                    <h3 class="card_title">Park Villa</h3>
+                    <p class="card_description">A two storey modern home Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, perferendis?</p>
+                </div>
+            </div>
+            <!--Card 3-->
+            <div class="project_card">
+                <div class="card_image">
+                    <img src="./images/Card5.webp" alt="Project 3 tile">
+                </div>
+                <div class="card_content">
+                    <div class="card_meta">
+                        <span class="card_category">Residential</span>
+                        <span class="card_year">Ongoing</span>
+                    </div>
+                    <h3 class="card_title">Park Villa</h3>
+                    <p class="card_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad recusandae accusamus excepturi maiores, quam quisquam!</p>
+                </div>
+            </div>
+            <!--Card 4-->
+            <div class="project_card">
+                <div class="card_image">
+                    <img src="./images/card4.webp" alt="Project 4 tile">
+                </div>
+                <div class="card_content">
+                    <div class="card_meta">
+                        <span class="card_category">Commercial</span>
+                        <span class="card_year">2025</span>
+                    </div>
+                    <h3 class="card_title">Koko Fuels building</h3>
+                    <p class="card_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad recusandae accusamus excepturi maiores, quam quisquam!</p>
+                </div>
+            </div>
+            <!--Card 5-->
+            <div class="project_card">
+                <div class="card_image">
+                    <img src="./images/hero Images/bannerimage1.webp" alt="Project 5 tile">
+                </div>
+                <div class="card_content">
+                    <div class="card_meta">
+                        <span class="card_category">Residential</span>
+                        <span class="card_year">2024</span>
+                    </div>
+                    <h3 class="card_title">Some Estate</h3>
+                    <p class="card_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad recusandae accusamus excepturi maiores, quam quisquam!</p>
+                </div>
+            </div>
+            <!--Card 6-->
+            <div class="project_card">
+                <div class="card_image">
+                    <img src="./images/hero Images/bannerimage3.webp" alt="Project 6 tile">
+                </div>
+                <div class="card_content">
+                    <div class="card_meta">
+                        <span class="card_category">Residential</span>
+                        <span class="card_year">Ongoing</span>
+                    </div>
+                    <h3 class="card_title">Some Estate</h3>
+                    <p class="card_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad recusandae accusamus excepturi maiores, quam quisquam!</p>
+                </div>
+            </div>
+            <!--Card 7-->
+            <div class="project_card">
+                <div class="card_image">
+                    <img src="./images/card7.webp" alt="Project 3 tile">
+                </div>
+                <div class="card_content">
+                    <div class="card_meta">
+                        <span class="card_category">Interior design</span>
+                        <span class="card_year">2025</span>
+                    </div>
+                    <h3 class="card_title">Santa Monica</h3>
+                    <p class="card_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad recusandae accusamus excepturi maiores, quam quisquam!</p>
                 </div>
             </div>
         </div>
+        <div class="more_container">
+           <div id="cardlink"><a href="#">View More Projects</a></div><!--About page here-->
+        </div>
+    </section>
+    <!--Services-->
     <section>
-
+        <div>
+            <h3>Our Services</h3>
+        </div>
+        <!--Tile 1-->
+        <div class="services_section">
+            <div class="services_container">
+                <div class="service_icon">
+                    <img src="" alt="">
+                </div>
+                <h4>Architectural Drawing</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit illum autem odit perspiciatis ducimus repudiandae!</p>
+            </div>
+        </div>
     </section>
 
     <script>
