Creative BuilderS Africa V2.2
Complete Landing Page

--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
                         <span class="card_category">Residential</span>
                         <span class="card_year">2023</span>
                     </div>
-                    <h3 class="card_title">Milimani Drive AO4</h3>
-                    <p class="card_description">A one storey moden home that balances privacy, comfort, striking architectural from and seamless indoor-outdoor</p>
+                    <h3 class="card_title">Tatu City, Kiambu - Kenya</h3>
+                    <p class="card_category">Scope - Design and Project Management</p>
+                    <p class="card_description">5-Bedroom modern home with open spaces, natural light, and seamless indoor-outdoor living. En-suite bedrooms include a master suite with walk-in closet and balcony. Premium finishes, smart features, landscaped gardens, pool, and covered parking complete the residence.</p>
                 </div>
             </div>
             <!--Card 2-->
@@ -115,8 +116,9 @@
                         <span class="card_category">Residential</span>
                         <span class="card_year">2024</span>
                     </div>
-                    <h3 class="card_title">Park Villa</h3>
-                    <p class="card_description">A two storey modern home Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, perferendis?</p>
+                    <h3 class="card_title">4 Bedroom House, Ngong' Kajiado - Kenya</h3>
+                    <p class="card_category">Scope - Design and Construction</p>
+                    <p class="card_description">Contemporary 4-bedroom home with open-plan spaces, natural light, and premium finishes. Managed full design, approvals, supervision, and coordination to deliver on time and budget from  concept to Completion. Highlights include modern style, quality materials, and energy-efficient design.</p>
                 </div>
             </div>
             <!--Card 3-->
@@ -126,11 +128,13 @@
                 </div>
                 <div class="card_content">
                     <div class="card_meta">
-                        <span class="card_category">Residential</span>
+                        <span class="card_category">Residential Estate</span>
                         <span class="card_year">Ongoing</span>
                     </div>
-                    <h3 class="card_title">Park Villa</h3>
-                    <p class="card_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad recusandae accusamus excepturi maiores, quam quisquam!</p>
+                    <h3 class="card_title">Lavington, Nairobi - Kenya</h3>
+                    <p class="card_category">Scope - Design and Construction</p>
+                    <p class="card_description">High-end residential estate in Lavington with multiple luxury units featuring modern design, open layouts, and premium finishes. Oversaw full project cycle from concept and approvals to supervision and quality control. Ensured timely, budget-conscious delivery with sustainable, energy-efficient solutions.
+</p>
                 </div>
             </div>
             <!--Card 4-->
@@ -140,11 +144,12 @@
                 </div>
                 <div class="card_content">
                     <div class="card_meta">
-                        <span class="card_category">Commercial</span>
+                        <span class="card_category">Brand Responsive Interior Design</span>
                         <span class="card_year">2025</span>
                     </div>
-                    <h3 class="card_title">Koko Fuels building</h3>
-                    <p class="card_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad recusandae accusamus excepturi maiores, quam quisquam!</p>
+                    <h3 class="card_title">Koko Business Center</h3>
+                    <p class="card_category">Scope - Brand Responsive Interior Design</p>
+                    <p class="card_description">Design that translates a company’s values, colors, and culture into physical space. Layout, lighting, furniture, finishes, and graphics work together to tell the brand story. Features include brand colors and materials, culture-driven layouts, custom furniture, mood-aligned lighting, and sustainable, innovative solutions.</p>
                 </div>
             </div>
             <!--Card 5-->
@@ -196,21 +201,112 @@
     </section>
     <!--Services-->
     <section>
-        <div>
-            <h3>Our Services</h3>
+        <div style="width: 100%; height: 100px; text-align: center; padding-top: 50px;">
+            <h3 style="font-weight: 400; font-size: 30px;">Our Services</h3>
         </div>
         <!--Tile 1-->
         <div class="services_section">
             <div class="services_container">
                 <div class="service_icon">
-                    <img src="" alt="">
+                    <img src="./images/serviceicons/Drawing.jpeg" alt="Drawing illustration">
                 </div>
-                <h4>Architectural Drawing</h4>
+                <h3>Architectural Drawing and Design</h3><br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit illum autem odit perspiciatis ducimus repudiandae!</p>
+            </div>
+            <!--Tile 2-->
+            <div class="services_container">
+                <div class="service_icon">
+                    <img src="./images/serviceicons/Construction.jpeg" alt="construction illustration">
+                </div>
+                <h3>Construction</h3><br>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius quasi reprehenderit assumenda esse aliquid vitae beatae possimus eligendi vel aspernatur?</p>
+            </div>
+            <!--Tile 3-->
+            <div class="services_container">
+                <div class="service_icon">
+                    <img src="./images/serviceicons/Rendering.jpeg" alt="Rendering Icon">
+                </div>
+                <h3>Image and Video Rendering</h3><br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit illum autem odit perspiciatis ducimus repudiandae!</p>
+            </div>
+            <!--Tile 4-->
+            <div class="services_container">
+                <div class="service_icon">
+                    <img src="./images/serviceicons/Interior Design.jpeg" alt="Interior Design Icon">
+                </div>
+                <h3>Interior Design</h3><br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit illum autem odit perspiciatis ducimus repudiandae!</p>
+            </div>
+            <!--Tile 5-->
+            <div class="services_container">
+                <div class="service_icon">
+                    <img src="./images/serviceicons/Vr.jpeg" alt="Virtual Reality Icon">
+                </div>
+                <h3>Virtual Reality</h3><br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, ut eligendi? Eum, rem suscipit ab iste nesciunt nulla.</p>
+            </div>
+            <!--Tile 6-->
+            <div class="services_container">
+                <div class="service_icon">
+                    <img src="./images/serviceicons/Excavate.jpeg" alt="Excavation illustration">
+                </div>
+                <h3>Excavation Services</h3><br>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit illum autem odit perspiciatis ducimus repudiandae!</p>
             </div>
         </div>
+        <div class="btncontainer">
+            <button class="btn1"><a href="#">View All Services</a></button>
+            <button class="btn2"><a href="#">Book a Consultation</a></button>
+        </div>
     </section>
-
+    <!--Clients and Patners Section-->
+    <section>
+        <div class="Clients_Container">
+            <div style="text-align: center; font-size: 20px; background-color: rgb(212, 212, 212);">Some of Our Client and Patners</div>
+            <div class="logo_containers">
+                <img src="./images/logos/D-Link.png" alt="Logo 1">
+                <img src="./images/logos/logo progigs.png" alt="Logo 2">
+                <img src="./images/logos/logo-sicc.png" alt="Logo 3">
+                <img src="./images/logos/Prime House Interior.webp" alt="Logo 4">
+                <img src="./images/logos/RAVI-HOMES-02.webp" alt="Logo 5">
+                <img src="./images/logos/safaricom.svg" alt="Logo 6">
+                <img src="./images/logos/TA_WEBSITE-LOGO-1.jpg" alt="Logo 7" style="height: 110px;">
+                <img src="./images/logos/Unity-Homes-Header-Logo.webp" alt="Logo 8">
+                <img src="./images/logos/D-Link.png" alt="Logo 1">
+                <img src="./images/logos/logo progigs.png" alt="Logo 2">
+                <img src="./images/logos/logo-sicc.png" alt="Logo 3">
+                <img src="./images/logos/Prime House Interior.webp" alt="Logo 4">
+                <img src="./images/logos/RAVI-HOMES-02.webp" alt="Logo 5">
+                <img src="./images/logos/safaricom.svg" alt="Logo 6">
+                <img src="./images/logos/TA_WEBSITE-LOGO-1.jpg" alt="Logo 7">
+                <img src="./images/logos/Unity-Homes-Header-Logo.webp" alt="Logo 8">
+            </div>
+        </div>
+    </section>
+    <!--Footer Section-->
+    <footer>
+        <div class="footer_container">
+            <div><a href="#top" style="text-decoration: none; color: #929dab; display: block; text-align: center; margin-bottom: 30px; text-decoration: underline 2px;">Back to Top</a></div>
+            <div class="footer_contents">
+                <div>
+                    <p>Our location</p><br>
+                    <address>
+                        G1-G4 Top Plaza Building, Kindaruma, Off<br>Ngong Road,<br><br>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.805745353731!2d36.823395!3d-1.2908739999999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f11629b06eb41%3A0x396191c8288348af!2sCreative%20Builders%20%26%20General%20Contractors!5e0!3m2!1sen!2ske!4v1758276808290!5m2!1sen!2ske" width="300" height="150" style="border: 5px; border-radius: 8px;" allowfullscreen=""  loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </address>
+                </div>
+                <div>
+                    <p>Contact Us</p><br>
+                    <p>Phone: +2540702066062</p><br>
+                    <p>Email: nicksonmunywoki@gmail.com</p>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>&copy;Copyright Creative Builders Africa Ltd 2025.All Rights Reserved.</p><br>
+            <p>Designed and Built by <span><a href="https://wa.me/254795669740" style="color: #929dab;">Leakey Hans Creative</a></span></p>
+        </div>
+    </footer>
     <script>
         let currentSlide = 0;
         const slides = document.querySelectorAll('.slide');
