--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     <!--Clients and Patners Section-->
     <section>
         <div class="Clients_Container">
-            <div style="text-align: center; font-size: 20px; background-color: rgb(212, 212, 212);">Some of Our Client and Patners</div>
+            <div style="text-align: center; font-size: 20px; font-weight: 600;">Some of Our Client and Patners</div>
             <div class="logo_containers">
                 <img src="./images/logos/D-Link.png" alt="Logo 1">
                 <img src="./images/logos/logo progigs.png" alt="Logo 2">
