Creative Builders Africa Limited V2.3
Updated landing Page// Re-edited text layouts

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     <!--Clients and Patners Section-->
     <section>
         <div class="Clients_Container">
-            <div style="text-align: center; font-size: 20px; font-weight: 600;">Some of Our Client and Patners</div>
+            <div style="text-align: center; font-size: 20px; font-weight: 600;">Some of Our Clients</div>
             <div class="logo_containers">
                 <img src="./images/logos/D-Link.png" alt="Logo 1">
                 <img src="./images/logos/logo progigs.png" alt="Logo 2">
@@ -291,8 +291,8 @@
                 <div>
                     <p>Our location</p><br>
                     <address>
-                        G1-G4 Top Plaza Building, Kindaruma, Off<br>Ngong Road,<br><br>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.805745353731!2d36.823395!3d-1.2908739999999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f11629b06eb41%3A0x396191c8288348af!2sCreative%20Builders%20%26%20General%20Contractors!5e0!3m2!1sen!2ske!4v1758276808290!5m2!1sen!2ske" width="300" height="150" style="border: 5px; border-radius: 8px;" allowfullscreen=""  loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        P.O Box 856-00600<br>4th Floor Aspire Center<br><br>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1485.5969790426975!2d36.801793496679586!3d-1.2657634081589404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f17406f2eebb9%3A0x903143f5ea6f4306!2sSimba%20Corporation%20Aspire%20Center%20Westlands!5e0!3m2!1sen!2ske!4v1758716932319!5m2!1sen!2ske" width="400" height="190" style="border:; border-radius: 5px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </address>
                 </div>
                 <div>
