Creative Builders Africa Ltd v2.4
Complete First About Page, Navbar Content Updates, integrated forms and minot layout and style changes

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                         <!--Navlinks-->
                         <ul class="navlinks">
                             <li><strong><a href="index.html">Home</a></strong></li>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Renders</a></li>
+                            <li><a href="./pages/about.html" rel="noopener  noreferrer">About Us</a></li>
                             <li><a href="#">Our Services</a></li>
                             <li><a href="#">Contact Us</a></li>
-                            <li id="nav_cta"><a href="#">Get a Quick Quote</a>
+                            <li><a href="#">Ask For a Fundi</a></li>
+                            <li id="nav_cta"><a href="https://forms.gle/TidR2JVRaxYHT66R8" target="_blank" rel="noopener noreferrer">Get a Quick Quote</a>
                             </li>
                         </ul>
                     </div>
@@ -71,14 +71,14 @@
                 <p class="top">About Us</p>
                 <br>
                 <h1>From Blueprint to Reality</h1><br>
-                <p>For ten years, Creative Builders Africa Ltd has been at the forefront of contemporary design creating projects that seamlessly blend innovation and elegance.
+                <p>Creative Builders Africa Ltd is a multidisciplinary firm in Kenya specializing in Architecture, Construction, interior Design, Graphic design and renovations.
                 <br>
-                Our approach is rooted in understanding every client’s story, turning ideas into reality with careful detail and sustainable building practices.
+                We are committed to transforming spaces through innovative, sustainable and cost-effective solutions tailored to our Clients' needs.
                 <br>
-                From family homes to signature commercial spaces, we work hand in hand with our clients to create projects that reflect their vision while setting new standards in architecture.</p>
+                By integrating green building practices and modern technologies, we deliver affordable yet high quality designs and construction services that enhance functionality, aesthetics and environmental responsibility.</p>
                 <br>
                 <br>
-                <a href="#">Read More</a>
+                <a href="./pages/about.html" rel="noreferrer noopener" >Read More</a>
             </div>
         </div>
     </section>
@@ -133,8 +133,7 @@
                     </div>
                     <h3 class="card_title">Lavington, Nairobi - Kenya</h3>
                     <p class="card_category">Scope - Design and Construction</p>
-                    <p class="card_description">High-end residential estate in Lavington with multiple luxury units featuring modern design, open layouts, and premium finishes. Oversaw full project cycle from concept and approvals to supervision and quality control. Ensured timely, budget-conscious delivery with sustainable, energy-efficient solutions.
-</p>
+                    <p class="card_description">High-end residential estate in Lavington with multiple luxury units featuring modern design, open layouts, and premium finishes. Oversaw full project cycle from concept and approvals to supervision and quality control. Ensured timely, budget-conscious delivery with sustainable, energy-efficient solutions.</p>
                 </div>
             </div>
             <!--Card 4-->
@@ -272,6 +271,7 @@
                 <img src="./images/logos/safaricom.svg" alt="Logo 6">
                 <img src="./images/logos/TA_WEBSITE-LOGO-1.jpg" alt="Logo 7" style="height: 110px;">
                 <img src="./images/logos/Unity-Homes-Header-Logo.webp" alt="Logo 8">
+                <img src="./images/logos/zuku-seeklogo.png" alt="logo 9">
                 <img src="./images/logos/D-Link.png" alt="Logo 1">
                 <img src="./images/logos/logo progigs.png" alt="Logo 2">
                 <img src="./images/logos/logo-sicc.png" alt="Logo 3">
@@ -280,6 +280,7 @@
                 <img src="./images/logos/safaricom.svg" alt="Logo 6">
                 <img src="./images/logos/TA_WEBSITE-LOGO-1.jpg" alt="Logo 7">
                 <img src="./images/logos/Unity-Homes-Header-Logo.webp" alt="Logo 8">
+                <img src="./images/logos/zuku-seeklogo.png" alt="logo 9">
             </div>
         </div>
     </section>
@@ -292,7 +293,7 @@
                     <p>Our location</p><br>
                     <address>
                         P.O Box 856-00600<br>4th Floor Aspire Center<br><br>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1485.5969790426975!2d36.801793496679586!3d-1.2657634081589404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f17406f2eebb9%3A0x903143f5ea6f4306!2sSimba%20Corporation%20Aspire%20Center%20Westlands!5e0!3m2!1sen!2ske!4v1758716932319!5m2!1sen!2ske" width="400" height="190" style="border:; border-radius: 5px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1485.5969790426975!2d36.801793496679586!3d-1.2657634081589404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f17406f2eebb9%3A0x903143f5ea6f4306!2sSimba%20Corporation%20Aspire%20Center%20Westlands!5e0!3m2!1sen!2ske!4v1758716932319!5m2!1sen!2ske" width="400" height="190" style=" border-radius: 5px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </address>
                 </div>
                 <div>
