Creative Builder Africa Ltd
Implemented Natural responsiveness, index and about different navbars

--- a/index.html
+++ b/index.html
@@ -11,20 +11,17 @@
         <header>
             <!--landing page navigation bar-->
             <nav>
-                <div class="navbar"><!--For debbuging-->
-                    <div class="nav_container">
-                        <img src="./images/logo.png" alt="creative builders logo" height="60" >
-                        <!--Navlinks-->
+                <div class="nav_container">
+                    <img src="./images/logo.png" alt="creative builders logo" height="60" >
+                    <!--Navlinks-->
                         <ul class="navlinks">
                             <li><strong><a href="index.html">Home</a></strong></li>
                             <li><a href="./pages/about.html" rel="noopener  noreferrer">About Us</a></li>
-                            <li><a href="#">Our Services</a></li>
                             <li><a href="#">Contact Us</a></li>
                             <li><a href="#">Ask For a Fundi</a></li>
                             <li id="nav_cta"><a href="https://forms.gle/TidR2JVRaxYHT66R8" target="_blank" rel="noopener noreferrer">Get a Quick Quote</a>
                             </li>
                         </ul>
-                    </div>
                 </div>
             </nav>
         </header>
@@ -225,7 +222,7 @@
                 <div class="service_icon">
                     <img src="./images/serviceicons/Rendering.jpeg" alt="Rendering Icon">
                 </div>
-                <h3>Image and Video Rendering</h3><br>
+                <h3>Rendering Services</h3><br>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit illum autem odit perspiciatis ducimus repudiandae!</p>
             </div>
             <!--Tile 4-->
@@ -250,6 +247,14 @@
                     <img src="./images/serviceicons/Excavate.jpeg" alt="Excavation illustration">
                 </div>
                 <h3>Excavation Services</h3><br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit illum autem odit perspiciatis ducimus repudiandae!</p>
+            </div>
+            <!--Tile 7-->
+            <div class="services_container">
+                <div class="service_icon">
+                    <img src="./images/serviceicons/Excavate.jpeg" alt="Excavation illustration">
+                </div>
+                <h3>Web Development</h3><br>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit illum autem odit perspiciatis ducimus repudiandae!</p>
             </div>
         </div>
