Creative builders Africa ltd
Implemented media query for navbar ==> Responsice ham menu on smaller screens

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="nav_container">
                     <img src="./images/logo.png" alt="creative builders logo" height="60" >
                     <!--Navlinks-->
-                        <ul class="navlinks">
+                        <ul class="navlinks" id="Navlinks">
                             <li><strong><a href="index.html">Home</a></strong></li>
                             <li><a href="./pages/about.html" rel="noopener  noreferrer">About Us</a></li>
                             <li><a href="#">Contact Us</a></li>
@@ -22,6 +22,11 @@
                             <li id="nav_cta"><a href="https://forms.gle/TidR2JVRaxYHT66R8" target="_blank" rel="noopener noreferrer">Get a Quick Quote</a>
                             </li>
                         </ul>
+                        <div class="hamburger" id="hamburger">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
                 </div>
             </nav>
         </header>
@@ -314,6 +319,16 @@
         </div>
     </footer>
     <script>
+
+        //Nav bar media query: Ham menu
+        const hamburger = document.getElementById('hamburger');
+        const Navlinks = document.getElementById('Navlinks');
+
+        hamburger.addEventListener('click', function() {
+            Navlinks.classList.toggle('active');
+            hamburger.classList.toggle('active');
+        });
+
         let currentSlide = 0;
         const slides = document.querySelectorAll('.slide');
         const indicators = document.querySelectorAll('.indicator');
