--- a/index.html
+++ b/index.html
@@ -105,7 +105,12 @@
                     </div>
                     <h3 class="card_title">Tatu City, Kiambu - Kenya</h3>
                     <p class="card_category">Scope - Design and Project Management</p>
-                    <p class="card_description">5-Bedroom modern home with open spaces, natural light, and seamless indoor-outdoor living. En-suite bedrooms include a master suite with walk-in closet and balcony. Premium finishes, smart features, landscaped gardens, pool, and covered parking complete the residence.</p>
+                    <p class="card_description">
+                        <details>
+                            <summary>About Project</summary>
+                            5-Bedroom modern home with open 
+                            spaces, natural light, and seamless indoor-outdoor living. En-suite bedrooms include a master suite with walk-in closet and balcony. Premium finishes, smart features, landscaped gardens, pool, and covered parking complete the residence.</p>
+                        </details>
                 </div>
             </div>
             <!--Card 2-->
